fix(monolith): Migrated notifications collection to MongoDB. Fixed the import order of most files.
