# apps/monolith/src/app/notifications/notificationsController.ts
@@ -1,4 +1,4 @@
-import { Controller, Get, Path, Put, Route, Tags } from 'tsoa';
+import { Controller, Get, Path, Put as Post, Route, Tags } from 'tsoa';
 import { Inject } from 'typescript-ioc';
 import { NotificationsService } from './notificationsService';
 import { Notification } from '@rpg-together/models';
@@ -19,7 +19,7 @@ export class NotificationsController extends Controller {
     return this._notificationsService.getNotification(notificationId);
   }
 
-  @Put('/{notificationId}/read')
+  @Post('/{notificationId}/read')
   public async readNotification(@Path() notificationId: string): Promise<void> {
     return this._notificationsService.readNotification(notificationId);
   }
